--- a/app/assets/stylesheets/modules/_new.scss
+++ b/app/assets/stylesheets/modules/_new.scss
@@ -20,7 +20,7 @@
       
       &__center {
         height: 100px;
-        width: 470px;
+        width: 500px;
         // background-color: black;
         margin: 0 auto;
         margin-top: 10px;
@@ -42,6 +42,44 @@
       font-size: 30px;
       color: black;
       text-align: center;
+      margin-bottom: 50px;
+
+      &__title{
+        width: 800px;
+        // font-weight: bold;
+        color: #6091d3;/*文字色*/
+        background: #FFF;
+        border: solid 3px #6091d3;/*線*/
+        border-radius: 10px;/*角の丸み*/
+        margin-top: 20px;
+        font-size: 20px;
+
+      }
+
+      &__text {
+        display: block;
+        height: 300px;
+        width: 800px;
+        margin-top: 50px;
+        margin: 0 auto;
+        margin-top: 20px;
+        // padding: 0.5em 1em;
+        // margin: 2em 0;
+        // font-weight: bold;
+        color: #6091d3;/*文字色*/
+        background: #FFF;
+        border: solid 3px #6091d3;/*線*/
+        border-radius: 10px;/*角の丸み*/
+      }
+
+      &__submit {
+        margin-top: 30px;
+        height: 100px;
+        width: 140px;
+      }
+      
     }
+
+    
   }
 }
