--- a/app/assets/stylesheets/modules/_posts.scss
+++ b/app/assets/stylesheets/modules/_posts.scss
@@ -40,9 +40,9 @@
 
     &__box {
       height: 50px;
-      width: 100%;
+      width: 80%;
       background-color: black;
-      // margin-top: 20px;
+      margin: 0 auto;
       color: #fff;
       list-style-type:none;
       line-height: 50px;
@@ -76,12 +76,13 @@
     }
 
     &__content {
-      height: 400px;
+      height: 600px;
       width: 100%;
       background-color: #fff;
       overflow: scroll;
       // margin-top: px;
       border: double 5px #4ec4d3;
+      margin-bottom: 70px;
 
       &__solid {
         height: ４5px;
