--- a/app/assets/stylesheets/modules/_new.scss
+++ b/app/assets/stylesheets/modules/_new.scss
@@ -40,14 +40,13 @@
 
     &__title{
       font-size: 30px;
-      color: black;
+      color: #fff;
       text-align: center;
       margin-bottom: 50px;
+      font-family: 'Sawarabi Gothic', sans-serif;
 
       &__title{
         width: 800px;
-        // font-weight: bold;
-        color: #6091d3;/*文字色*/
         background: #FFF;
         border: solid 3px #6091d3;/*線*/
         border-radius: 10px;/*角の丸み*/
@@ -63,10 +62,6 @@
         margin-top: 50px;
         margin: 0 auto;
         margin-top: 20px;
-        // padding: 0.5em 1em;
-        // margin: 2em 0;
-        // font-weight: bold;
-        color: #6091d3;/*文字色*/
         background: #FFF;
         border: solid 3px #6091d3;/*線*/
         border-radius: 10px;/*角の丸み*/
