--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -32,5 +32,6 @@
                 .main__container__content__solid__box__boxa__name
                   -# =post.name
                 .main__container__content__solid__box__boxa__datatime
+                  投稿日時
                   =post.created_at
         
