--- a/app/assets/stylesheets/modules/_posts.scss
+++ b/app/assets/stylesheets/modules/_posts.scss
@@ -7,7 +7,6 @@
   &__container {
     height: 100vh;
     width: 1200px;
-    // background-color: #fff;
     padding-right: 15px;
     padding-left: 15px;
     margin-left: auto;
@@ -15,13 +14,11 @@
     margin: 0 auto;
 
     &__header {
-      // background-color: #fff;
       height: 160px;
       
       &__center {
         height: 100px;
-        width: 470px;
-        // background-color: black;
+        width: 530px;
         margin: 0 auto;
         margin-top: 10px;
         text-align: center;
@@ -29,25 +26,30 @@
         line-height: 160px;
         font-family: 'HanziPen SC','Brush Script MT',sans-serif;
         font-weight: bold;
+        border: none;
+        text-shadow: 0px 0px 1px #000,
+        4px 4px 2px rgba(0,0,0,0.5);
+        box-sizing:border-box;
+       
 
         a {
           text-decoration: none;
           color: #FF9800;
+          font-size: 55px;
         }
       }
       
     }
 
     &__box {
-      height: 50px;
-      width: 80%;
+      height: 40px;
+      width: 100%;
       background-color: black;
       margin: 0 auto;
+      margin-top: 20px;
       color: #fff;
       list-style-type:none;
-      line-height: 50px;
-      // padding: 0.5em 1em;
-      // margin: 2em 0;
+      line-height: 40px;
       color: #FFF;
       background: #235180;
       border-bottom: solid 6px #3f87ce;
@@ -71,7 +73,7 @@
       height: 45px;
       width: 200px;
       font-size: 22px;
-      margin-top: 30px;
+      margin-top: 60px;
       // font-weight: bold;
     }
 
@@ -85,20 +87,32 @@
       margin-bottom: 70px;
 
       &__solid {
-        // height: 50px;
-        border-bottom: 1px solid black;
-        // line-height: 50px;
+        border-bottom: 3px double #0097A7;
         &__box {
           height: 100%;
           width: 100%;
-          // background-color: chartreuse;
+          background: -webkit-repeating-linear-gradient(-45deg, #f5edfd, #f5edfd 5px, #fdfcff 5px, #fdfcff 10px);
+          background: repeating-linear-gradient(-45deg, #f5edfd, #f5edfd 5px, #fdfcff 5px, #fdfcff 10px);
+          
 
           &__title {
-            // height: 60%;
             width: 100%;
-            // background-color: chocolate;
-            margin-top: 3px;
-            
+            // margin-top: 3px;
+            font-weight: bold;
+            font-size: 20PX;
+            margin-left: 5PX;
+          }
+
+          &__boxa {
+          
+            &__name {
+
+            }
+
+            &__datatime {
+              margin-left: 5px;
+              font-size: 14px;
+            }
           }
         }
       }
