--- a/app/assets/stylesheets/modules/_posts.scss
+++ b/app/assets/stylesheets/modules/_posts.scss
@@ -101,6 +101,11 @@
             font-weight: bold;
             font-size: 20PX;
             margin-left: 5PX;
+
+            a {
+              text-decoration: none;
+              color: black;
+            }
           }
 
           &__boxa {
