--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -8,10 +8,17 @@
           利用ルール
       %li 
         %a{href:"#"} 天気予報
-      %li 
-        %a{href:"#"} login
-      %li 
-        %a{href:"#"} 新規登録
+      -if user_signed_in? 
+        %li 
+          = link_to "新規投稿", new_post_path, class: "header__right--btn"
+        %li 
+          = link_to "logout", destroy_user_session_path, method: :delete, class: "header__right--btn" 
+      -else
+        %li 
+          = link_to "login", new_user_session_path, class: "header__right--btn" 
+        %li
+          = link_to "新規登録", new_user_registration_path, class: "header__right--btn" 
+          
 .main__container__post
   %a{href:"posts/new"} 新規投稿
 
