--- a/app/views/posts/rule.html.haml
+++ b/app/views/posts/rule.html.haml
@@ -1,1 +1,8 @@
-.rule__content
+.rule
+  .rule__text
+    利用ルール
+  .rule__content
+    .rule__content__comment
+      ・掲示板のルールは守ること
+      <br>
+      ・・誹謗中傷のようなコメントは厳禁
