--- a/app/assets/stylesheets/modules/_rule.scss
+++ b/app/assets/stylesheets/modules/_rule.scss
@@ -1,6 +1,27 @@
-.rule__content {
-  height: 500px;
-  max-width: 700px;
-  background-color: #fff;
+.rule{
+  font-size: 25px;
   margin: 0 auto;
+
+  &__text {
+    text-align: center;
+    color: #fff;
+  }
+
+
+  &__content {
+    height: 500px;
+    max-width: 700px;
+    background: #d6ebff;
+    box-shadow: 0px 0px 0px 10px #d6ebff;
+    border: dashed 2px white;
+    border-radius: 10px;
+    margin: 0 auto;
+    margin-top: 30px;
+    margin-bottom: 100px;
+    
+
+    &__comment {
+      color: black;
+    }
+  }
 }
