--- a/app/assets/stylesheets/modules/_posts.scss
+++ b/app/assets/stylesheets/modules/_posts.scss
@@ -9,8 +9,8 @@
     width: 1200px;
     padding-right: 15px;
     padding-left: 15px;
-    margin-left: auto;
-    margin-right: auto;
+    // margin-left: auto;
+    // margin-right: auto;
     margin: 0 auto;
 
     &__header {
