--- a/app/assets/stylesheets/modules/_show.scss
+++ b/app/assets/stylesheets/modules/_show.scss
@@ -1,11 +1,28 @@
 .warpper {
   height: 600px;
-  width: 600px;
+  width: 70%;
   background-color: #fff;
+  overflow: scroll;
+  border: double 5px #4ec4d3;
+  margin-bottom: 70px;
   margin: 0 auto;
-  // overflow: scroll;
-  // // margin-top: px;
-  // border: double 5px #4ec4d3;
-  // margin-bottom: 70px;
+  margin-bottom: 70px;
+  background: -webkit-repeating-linear-gradient(-45deg, #f5edfd, #f5edfd 5px, #fdfcff 5px, #fdfcff 10px);
+  background: repeating-linear-gradient(-45deg, #f5edfd, #f5edfd 5px, #fdfcff 5px, #fdfcff 10px);
+  padding: 15px;
+  &__title {
+    margin: 0 auto;
+    text-align: center;
+    font-size: 35px;
+    font-weight: bold;
+    // margin-bottom: 50px;
+    margin-top: 20px;
+  }
+  &__content {
+    font-size: 20px;
+    // margin-left: 12px;
+    margin-top: 50px;
+  }
+  
 }
 
