--- a/app/assets/stylesheets/modules/_posts.scss
+++ b/app/assets/stylesheets/modules/_posts.scss
@@ -1,12 +1,12 @@
 .main {
-  height: 100vh;
-  width: 100vw;
-  overflow: scroll;
+  // height: 100vh;
+  max-width: 100vw;
+  // overflow: scroll;
   background-color: #517D99;
 
   &__container {
-    height: 100vh;
-    width: 1200px;
+    // height: 100vh;
+    max-width: 1200px;
     padding-right: 15px;
     padding-left: 15px;
     // margin-left: auto;
@@ -18,9 +18,9 @@
       
       &__center {
         height: 100px;
-        width: 530px;
+        max-width: 530px;
         margin: 0 auto;
-        margin-top: 10px;
+        // margin-top: 10px;
         text-align: center;
         font-size: 50px;
         line-height: 160px;
@@ -41,9 +41,14 @@
       
     }
 
+    &__footer {
+      width: 100%;
+      height: 10vh;
+    }
+
     &__box {
       height: 40px;
-      width: 100%;
+      max-width: 100%;
       background-color: black;
       margin: 0 auto;
       margin-top: 20px;
@@ -56,9 +61,13 @@
       box-shadow: 0 3px 6px rgba(0, 0, 0, 0.25);
       border-radius: 9px;
 
+      ul {
+        display: flex;
+      }
+
       li {
         display: inline-block;
-        width: 24.5%;
+        width: 25%;
         text-align: center;
       }
 
@@ -71,7 +80,7 @@
 
     &__post {
       height: 45px;
-      width: 200px;
+      max-width: 200px;
       font-size: 22px;
       margin-top: 60px;
       // font-weight: bold;
@@ -79,12 +88,12 @@
 
     &__content {
       height: 600px;
-      width: 100%;
+      max-width: 100%;
       background-color: #fff;
       overflow: scroll;
 
       border: double 5px #4ec4d3;
-      margin-bottom: 70px;
+      // margin-bottom: 70px;
       background: -webkit-repeating-linear-gradient(-45deg, #f5edfd, #f5edfd 5px, #fdfcff 5px, #fdfcff 10px);
       background: repeating-linear-gradient(-45deg, #f5edfd, #f5edfd 5px, #fdfcff 5px, #fdfcff 10px);
 
@@ -92,7 +101,7 @@
         border-bottom: 3px double #0097A7;
         &__box {
           height: 100%;
-          width: 100%;
+          max-width: 100%;
           
           
 
