--- a/app/assets/stylesheets/modules/_new.scss
+++ b/app/assets/stylesheets/modules/_new.scss
@@ -1,81 +1,83 @@
-// .main {
-//   height: 100vh;
-//   width: 100vw;
-//   overflow: scroll;
-//   background-color: #517D99;
+.main {
+  // height: 100vh;
+  width: 100vw;
+  overflow: scroll;
+  background-color: #517D99;
 
-//   &__container {
-//     height: 100vh;
-//     width: 1200px;
-//     // background-color: #fff;
-//     padding-right: 15px;
-//     padding-left: 15px;
-//     margin-left: auto;
-//     margin-right: auto;
-//     margin: 0 auto;
-
-//     &__header {
-//       // background-color: #fff;
-//       height: 160px;
-
-      
-//       &__center {
-//         height: 100px;
-//         width: 500px;
-//         // background-color: black;
-//         margin: 0 auto;
-//         margin-top: 10px;
-//         text-align: center;
-//         font-size: 50px;
-//         line-height: 160px;
-//         font-family: 'HanziPen SC','Brush Script MT',sans-serif;
-//         font-weight: bold;
-
-//         a {
-//           text-decoration: none;
-//           color: #FF9800;
-//         }
-//       }
-      
-      
-//     }
-
-.title{
-  font-size: 30px;
-  color: #fff;
-  text-align: center;
-  margin-bottom: 50px;
-  font-family: 'Sawarabi Gothic', sans-serif;
-
-  &__title{
-    width: 800px;
-    background: #FFF;
-    border: solid 3px #6091d3;/*線*/
-    border-radius: 10px;/*角の丸み*/
-    margin-top: 20px;
-    font-size: 20px;
-
-  }
-
-  &__text {
-    display: block;
-    height: 300px;
-    width: 800px;
-    margin-top: 50px;
+  &__container {
+    height: 100vh;
+    max-width: 1200px;
+    // background-color: #fff;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-left: auto;
+    margin-right: auto;
     margin: 0 auto;
-    margin-top: 20px;
-    background: #FFF;
-    border: solid 3px #6091d3;/*線*/
-    border-radius: 10px;/*角の丸み*/
-  }
 
-  &__submit {
-    margin-top: 30px;
-    height: 100px;
-    width: 140px;
-  }
-  
-}
+    &__header {
+      // background-color: #fff;
+      height: 160px;
+
+      
+      &__center {
+        height: 100px;
+        max-width: 500px;
+        // background-color: black;
+        margin: 0 auto;
+        margin-top: 10px;
+        text-align: center;
+        font-size: 50px;
+        line-height: 160px;
+        font-family: 'HanziPen SC','Brush Script MT',sans-serif;
+        font-weight: bold;
+
+        a {
+          text-decoration: none;
+          color: #FF9800;
+        }
+      }
+      
+      
+    }
+
+    &__title{
+      font-size: 30px;
+      color: #fff;
+      text-align: center;
+      margin-bottom: 50px;
+      font-family: 'Sawarabi Gothic', sans-serif;
+
+      &__title{
+        width: 70%;
+        background: #FFF;
+        border: solid 3px #6091d3;/*線*/
+        border-radius: 10px;/*角の丸み*/
+        margin-top: 20px;
+        font-size: 20px;
+
+      }
+
+      &__text {
+        display: block;
+        height: 300px;
+        width: 70%;
+        margin-top: 50px;
+        margin: 0 auto;
+        margin-top: 20px;
+        background: #FFF;
+        font-size: 20px;
+        border: solid 3px #6091d3;/*線*/
+        border-radius: 10px;/*角の丸み*/
+      }
+
+      &__submit {
+        margin-top: 30px;
+        height: 100px;
+        height: 25px;
+        width: 150px;
+      }
+      
+    }
     
-//   }
-// }
+  }
+}
