--- a/app/assets/stylesheets/modules/_show.scss
+++ b/app/assets/stylesheets/modules/_show.scss
@@ -1,10 +1,10 @@
 .warpper {
-  height: 600px;
-  width: 70%;
+  height: 400px;
+  max-width: 70%;
   background-color: #fff;
   overflow: scroll;
   border: double 5px #4ec4d3;
-  margin-bottom: 70px;
+  // margin-bottom: 70px;
   margin: 0 auto;
   margin-bottom: 70px;
   background: -webkit-repeating-linear-gradient(-45deg, #f5edfd, #f5edfd 5px, #fdfcff 5px, #fdfcff 10px);
