--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -37,4 +37,5 @@
             .main__container__content__solid__box__boxa__datatime
               投稿日時
               =post.created_at
+.main__container__footer
     
