--- a/app/assets/stylesheets/modules/_posts.scss
+++ b/app/assets/stylesheets/modules/_posts.scss
@@ -3,6 +3,7 @@
   max-width: 100vw;
   // overflow: scroll;
   background-color: #517D99;
+  
 
   &__container {
     // height: 100vh;
@@ -44,6 +45,7 @@
     &__footer {
       width: 100%;
       height: 10vh;
+      margin-bottom: 0;
     }
 
     &__box {
