--- a/app/assets/stylesheets/modules/_rule.scss
+++ b/app/assets/stylesheets/modules/_rule.scss
@@ -9,7 +9,7 @@
 
 
   &__content {
-    height: 500px;
+    max-height: 500px;
     max-width: 700px;
     background: #d6ebff;
     box-shadow: 0px 0px 0px 10px #d6ebff;
