--- a/app/assets/stylesheets/modules/_show.scss
+++ b/app/assets/stylesheets/modules/_show.scss
@@ -16,13 +16,39 @@
     font-size: 35px;
     font-weight: bold;
     // margin-bottom: 50px;
-    margin-top: 20px;
+    margin-top: 10px;
+  }
+  &__btn {
+    display: flex;
+    margin-top: 10px;
+    margin-left: 10px;
+    justify-content: center;
+   
+    
+    &__edit {
+      display: block;
+      border-radius: 5px;
+      color: #ffffff;
+      background-color:blue;
+      padding: 0 10px;
+      text-decoration: none;
+      margin-right: 10px;
+      cursor: pointer;
+    }
+    &__delete {
+      border-radius: 5px;
+      color: #ffffff;
+      background-color:blue;
+      padding: 0 10px;
+      text-decoration: none;
+      margin-left: 10px;
+      cursor: pointer;
+    }
+    
   }
   &__content {
     font-size: 25px;
-    // margin-left: 12px;
-    margin-top: 50px;
+    margin-top: 30px;
   }
-  
 }
 
