--- a/app/assets/stylesheets/modules/_show.scss
+++ b/app/assets/stylesheets/modules/_show.scss
@@ -26,23 +26,51 @@
    
     
     &__edit {
-      display: block;
-      border-radius: 5px;
-      color: #ffffff;
-      background-color:blue;
-      padding: 0 10px;
+      // display: block;
+      // border-radius: 5px;
+      // color: #ffffff;
+      // background-color:blue;
+      // padding: 0 10px;
+      // text-decoration: none;
+      // margin-right: 10px;
+      // cursor: pointer;
+      display: inline-block;
+      padding: 0.5em 1em;
       text-decoration: none;
+      background: #668ad8;/*ボタン色*/
+      color: #FFF;
+      border-bottom: solid 4px #627295;
+      border-radius: 3px;
       margin-right: 10px;
       cursor: pointer;
+
+      a {
+        text-decoration: none;
+        color: #fff;
+      }
     }
     &__delete {
-      border-radius: 5px;
-      color: #ffffff;
-      background-color:blue;
-      padding: 0 10px;
+      display: inline-block;
+      padding: 0.5em 1em;
       text-decoration: none;
-      margin-left: 10px;
+      background: #668ad8;/*ボタン色*/
+      color: #FFF;
+      border-bottom: solid 4px #627295;
+      border-radius: 3px;
       cursor: pointer;
+
+      :active {
+         /*ボタンを押したとき*/
+      -webkit-transform: translateY(4px);
+      transform: translateY(4px);/*下に動く*/
+      border-bottom: none;/*線を消す*/
+     
+      }
+       
+      a {
+        text-decoration: none;
+        color: #fff;
+      }
     }
     
   }
