--- a/app/assets/stylesheets/modules/_posts.scss
+++ b/app/assets/stylesheets/modules/_posts.scss
@@ -137,6 +137,26 @@
       
     }
   }
-  
+
  
+  h5 {
+    font-size: 30px;
+    text-align: center;
+    font-family:Times New Roman,"ＭＳ Ｐゴシック";
+  }
+  .field {
+    text-align: center;
+    margin-bottom: 30px;
+    font-size: 20px;
+    font-family:Times New Roman,"ＭＳ Ｐゴシック";
+    margin-top: 30px;
+  }
+
+  .actions {
+    font-size: 25px;
+    text-align: center;
+    font-family:Times New Roman,"ＭＳ Ｐゴシック";
+    
+  }
+  
 }
