--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -33,7 +33,8 @@
               =post.title
           .main__container__content__solid__box__boxa
             .main__container__content__solid__box__boxa__name
-              -# =post.name
+              -# =post.user.nickname
+              -# =post.nickname
             .main__container__content__solid__box__boxa__datatime
               投稿日時
               =post.created_at
