--- a/app/views/posts/rule.html.haml
+++ b/app/views/posts/rule.html.haml
@@ -8,3 +8,9 @@
       ・誹謗中傷のようなコメントは厳禁
       <br>
       ・対戦終了後速やかに投稿を削除してください
+      <br>
+      ・礼儀を持って投稿するようにしましょう
+      <br>
+      ・試合成立後のドタキャンはNGです
+      <br>
+      ・「場所」「時間」「チーム名」は必ず記載しましょう
