--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -32,11 +32,12 @@
             =link_to post do
               =post.title
           .main__container__content__solid__box__boxa
-            .main__container__content__solid__box__boxa__name
-              -# =post.user.nickname
-              -# =post.nickname
+            
             .main__container__content__solid__box__boxa__datatime
               投稿日時
               =post.created_at
+            .main__container__content__solid__box__boxa__name
+              投稿者
+              =post.user.nickname
 .main__container__footer
     
