--- a/app/assets/stylesheets/modules/_posts.scss
+++ b/app/assets/stylesheets/modules/_posts.scss
@@ -93,11 +93,11 @@
       max-width: 100%;
       background-color: #fff;
       overflow: scroll;
-
+      margin-top: 15px;
       border: double 5px #4ec4d3;
       // margin-bottom: 70px;
-      background: -webkit-repeating-linear-gradient(-45deg, #f5edfd, #f5edfd 5px, #fdfcff 5px, #fdfcff 10px);
-      background: repeating-linear-gradient(-45deg, #f5edfd, #f5edfd 5px, #fdfcff 5px, #fdfcff 10px);
+      // background: -webkit-repeating-linear-gradient(-45deg, #f5edfd, #f5edfd 5px, #fdfcff 5px, #fdfcff 10px);
+      // background: repeating-linear-gradient(-45deg, #f5edfd, #f5edfd 5px, #fdfcff 5px, #fdfcff 10px);
 
       &__solid {
         border-bottom: 3px double #0097A7;
@@ -121,14 +121,20 @@
           }
 
           &__boxa {
-          
-            &__name {
-
-            }
+            display: flex;
+            justify-content: space-between;
+            
 
             &__datatime {
               margin-left: 5px;
               font-size: 14px;
+            }
+            &__name {
+              font-family:Times New Roman,"ＭＳ Ｐゴシック";
+              // font-weight: bold;
+              width: 100px;
+              text-align: right;
+              margin-right: 10px;
             }
           }
         }
