--- a/app/views/posts/rule.html.haml
+++ b/app/views/posts/rule.html.haml
@@ -7,10 +7,10 @@
       <br>
       ・誹謗中傷のようなコメントは厳禁
       <br>
-      ・対戦終了後速やかに投稿を削除してください
+      ・対戦終了後速やかに投稿を削除すること
       <br>
       ・礼儀を持って投稿するようにしましょう
       <br>
       ・試合成立後のドタキャンはNGです
       <br>
-      ・「場所」「時間」「チーム名」は必ず記載しましょう
+      ・「場所」「時間」「チーム名」」は必ず記載しましょう
