--- a/app/assets/stylesheets/modules/_posts.scss
+++ b/app/assets/stylesheets/modules/_posts.scss
@@ -85,7 +85,7 @@
       max-width: 200px;
       font-size: 22px;
       margin-top: 60px;
-      // font-weight: bold;
+      font-weight: bold;
     }
 
     &__content {
