--- a/app/assets/stylesheets/modules/_posts.scss
+++ b/app/assets/stylesheets/modules/_posts.scss
@@ -14,6 +14,8 @@
     // margin-right: auto;
     margin: 0 auto;
 
+    
+
     &__header {
       height: 160px;
       
@@ -85,7 +87,7 @@
       max-width: 200px;
       font-size: 22px;
       margin-top: 60px;
-      font-weight: bold;
+      // font-weight: bold;
     }
 
     &__content {
@@ -159,10 +161,10 @@
   }
 
   .actions {
-    font-size: 25px;
+    font-size: 20px;
     text-align: center;
     font-family:Times New Roman,"ＭＳ Ｐゴシック";
-    
+    cursor: pointer;
   }
   
 }
