--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -16,11 +16,11 @@
       = form.text_area :content, placeholder: "コメントする" , rows: "2", class: "textbox" 
       = form.submit "投稿", class: "form__submit" 
   %end
-    .comment__comments
-      if @comments
-         @comments.each do |comment| 
-            <strong><%= comment.user.nickname ：</strong>
-             comment.content 
-        %end
-      %end
-  %end
+  -#   .comment__comments
+  -#     if @comments
+  -#        @comments.each do |comment| 
+  -#           <strong><%= comment.user.nickname ：</strong>
+  -#            comment.content 
+  -#       %end
+  -#     %end
+  -# %end
