--- a/app/views/posts/rule.html.haml
+++ b/app/views/posts/rule.html.haml
@@ -11,6 +11,6 @@
       <br>
       ・礼儀を持って投稿するようにしましょう
       <br>
-      ・試合成立後のドタキャンはNGです
+      ・試合成立後のドタキャンはNG
       <br>
       ・「場所」「時間」「チーム名」は必ず記載しましょう
