--- a/app/assets/stylesheets/modules/_new.scss
+++ b/app/assets/stylesheets/modules/_new.scss
@@ -72,9 +72,10 @@
 
       &__submit {
         margin-top: 30px;
-        height: 100px;
-        height: 25px;
-        width: 150px;
+        height: 80px;
+        height: 40px;
+        width: 120px;
+        font-size: 20px;
       }
       
     }
