--- a/app/assets/stylesheets/modules/_posts.scss
+++ b/app/assets/stylesheets/modules/_posts.scss
@@ -135,8 +135,8 @@
               font-family:Times New Roman,"ＭＳ Ｐゴシック";
               // font-weight: bold;
               width: 100px;
-              text-align: right;
-              margin-right: 10px;
+              // text-align: right;
+              // margin-right: 10px;
             }
           }
         }
@@ -155,7 +155,7 @@
   .field {
     text-align: center;
     margin-bottom: 30px;
-    font-size: 20px;
+    font-size: 18px;
     font-family:Times New Roman,"ＭＳ Ｐゴシック";
     margin-top: 30px;
   }
