--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -6,8 +6,8 @@
       %li 
         =link_to rule_posts_path do
           利用ルール
-      %li 
-        %a{href:"#"} 天気予報
+      -# %li 
+      -#   %a{href:"#"} 天気予報
       -if user_signed_in? 
         %li 
           = link_to "新規投稿", new_post_path, class: "header__right--btn"
@@ -19,8 +19,8 @@
         %li
           = link_to "新規登録", new_user_registration_path, class: "header__right--btn" 
           
-.main__container__post
-  %a{href:"posts/new"} 新規投稿
+-# .main__container__post
+-#   %a{href:"posts/new"} 新規投稿
 
 
 .main__container__content
