--- a/app/assets/stylesheets/modules/_posts.scss
+++ b/app/assets/stylesheets/modules/_posts.scss
@@ -52,7 +52,7 @@
 
     &__box {
       height: 40px;
-      max-width: 100%;
+      max-width: 60%;
       background-color: black;
       margin: 0 auto;
       margin-top: 20px;
@@ -71,7 +71,7 @@
 
       li {
         display: inline-block;
-        width: 25%;
+        width: 40%;
         text-align: center;
       }
 
@@ -82,20 +82,20 @@
       }
     }
 
-    &__post {
-      height: 45px;
-      max-width: 200px;
-      font-size: 22px;
-      margin-top: 60px;
-      // font-weight: bold;
-    }
+    // &__post {
+    //   height: 45px;
+    //   max-width: 200px;
+    //   font-size: 25px;
+    //   margin-top: 60px;
+    //   // font-weight: bold;
+    // }
 
     &__content {
       height: 600px;
       max-width: 100%;
       background-color: #fff;
       overflow: scroll;
-      margin-top: 15px;
+      margin-top: 60px;
       border: double 5px #4ec4d3;
       // margin-bottom: 70px;
       // background: -webkit-repeating-linear-gradient(-45deg, #f5edfd, #f5edfd 5px, #fdfcff 5px, #fdfcff 10px);
