--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -12,16 +12,16 @@
     .warpper__btn__delete
       = link_to post_path(@post),method: :delete do
         削除
--#   -if current_user 
--#     = form_with(model: [@post, @comment], local: true, id: "new_comment") do |form|  
--#       = form.text_area :content, placeholder: "コメントする" , rows: "2", class: "textbox" 
--#       = form.submit "投稿", class: "form__submit" 
--#   %end
-  -#   .comment__comments
-  -#     if @comments
-  -#        @comments.each do |comment| 
-  -#           <strong><%= comment.user.nickname ：</strong>
-  -#            comment.content 
-  -#       %end
-  -#     %end
-  -# %end
+  -if current_user 
+    = form_with(model: [@post, @comment], local: true, id: "new_comment") do |form|  
+      = form.text_area :content, placeholder: "コメントする" , rows: "2", class: "textbox" 
+      = form.submit "投稿", class: "form__submit" 
+  %end
+    .comment__comments
+      if @comments
+         @comments.each do |comment| 
+            <strong><%= comment.user.nickname ：</strong>
+             comment.content 
+        %end
+      %end
+  %end
