コメント機能の追加

--- a/app/assets/stylesheets/modules/_posts.scss
+++ b/app/assets/stylesheets/modules/_posts.scss
@@ -134,7 +134,7 @@
             &__name {
               font-family:Times New Roman,"ＭＳ Ｐゴシック";
               // font-weight: bold;
-              width: 100px;
+              // width: 130px;
               // text-align: right;
               // margin-right: 10px;
             }
