--- a/app/assets/stylesheets/modules/_show.scss
+++ b/app/assets/stylesheets/modules/_show.scss
@@ -1,5 +1,5 @@
 .warpper {
-  height: 400px;
+  min-height: 400px;
   max-width: 70%;
   background-color: #fff;
   overflow: scroll;
@@ -70,6 +70,15 @@
   &__content {
     font-size: 25px;
     margin-top: 30px;
+  }
+  .textbox {
+    margin-top: 15px;
+    width: 95%;
+  }
+  .form__submit {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 15%;
   }
 }
 
